tests/integration/snapshots/integration__commands__help__no_args.snap
---
source: tests/integration/commands/help.rs
expression: output.snapshot_display()
---
args: []
status: 2
success: false
stdin ---
<no stdin passed>
stdout ---

stderr ---
jjpwrgem json parser with really good error messages

Usage: jjp <COMMAND>

Commands:
  format  Make your json look really good
  check   Validates json syntax
  lsp     Start a language server over stdio

Options:
  -h, --help     Print help
  -V, --version  Print version

jjpwrgem is a tool for formatting and validating json inputs

Examples:
	$ echo -en "{ \"rust\":\"is a must\"   } " | jjp format
	{ "rust": "is a must" }

	$ echo -en "{\"coolKey\"}" | jjp check
	error: expected colon after key, found `}`
	 --> stdin:1:11
	  |
	1 | {"coolKey"}
	  |  ---------^
	  |  |
	  |  expected due to `"coolKey"`
	  |
	help: insert colon and placeholder value
	  |
	1 | {"coolKey": "🐟🛹"}
	  |           ++++++++

Run jjp <COMMAND> --help for information about specific commands
